<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jobreporting.views.RptFormActivityFragment"
    tools:showIn="@layout/activity_rpt_form"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/rpt_form_outlineborder_1"
    android:id="@+id/layout_rpt_form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView_rpt_form"
        android:layout_gravity="center_horizontal" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView_layout_rpt_form"
            android:background="@drawable/rpt_form_outlineborder_2"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_rpt_form_heading"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:text="@string/rpt_form_heading"
                    android:background="@drawable/rpt_form_heading"/>

                <!-- Purpose of this layout to provide common padding to all child elements -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_rpt_form_dyna"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/clientes_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="72dp"
                        android:visibility="invisible"

                        >
                        <requestFocus />
                    </AutoCompleteTextView>

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_rpt_form_signpad"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rpt_form_signpad"
                    android:visibility="gone"
                    >

                    <com.github.gcacace.signaturepad.views.SignaturePad
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:id="@+id/signature_pad"
                        app:penColor="#1E88E5"/>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:id="@+id/signature_pad_description"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:textColor="#EF5350"
                        android:textSize="14sp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/rpt_form_signpad" />

                    <Button
                        android:id="@+id/rpt_form_signpad_clear_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/rpt_form_signpad_clear_btn"
                        android:background="#FFFFFF"
                        android:textSize="16sp"
                        android:textColor="#0277BD"
                        android:enabled="false" />

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_rpt_form_btns"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="60dp"
                    android:paddingBottom="50dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_rpt_form_reset"
                        android:text="@string/btn_rpt_form_reset"
                        android:fontFamily="sans-serif"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/rpt_forms_buttons_reset"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_rpt_form_save"
                        android:text="@string/btn_rpt_form_save"
                        android:fontFamily="sans-serif"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/rpt_forms_buttons_submit"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>
